# system_manager

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md
include/: Copy.h  Create.h  Delete.h  Dir.h  Exceptions.h  Find.h  Guides.h  ICommand.h  Insert.h  Log.h  Modify.h  Parser.h  Read.h  SystemManager.h
include/commands/: Copy.h  Create.h  Delete.h  Dir.h  Find.h  ICommand.h  Insert.h  Modify.h  Read.h
include/utils/: Log.h  Parser.h  SystemManager.h
reports/: code_style.md  diagrams.md  planning.md  tests.md  verification.md
src/: main.cpp
src/commands/: Copy.cpp  Create.cpp  Delete.cpp  Dir.cpp  Find.cpp  ICommand.cpp  Insert.cpp  Modify.cpp  Read.cpp
src/utils/: Log.cpp  Parser.cpp  SystemManager.cpp
tests/: CMakeLists.txt
tests/include/: mock_command.h
tests/src/: mock_command.cpp  test_parser.cpp  test_system_manager.cpp
